[package]
name = "symphonia-test"
version = "0.2.0"
description = "Project Symphonia compliance testing utility"
homepage = "https://github.com/pdeljanov/Symphonia"
repository = "https://github.com/pdeljanov/Symphonia"
authors = ["PAndaContron <rajtel99@gmail.com>"]
license = "MPL-2.0"
edition = "2018"

[dependencies]
symphonia = { version = "0.2", path = "../symphonia", features = [ "aac", "mp3", "isomp4" ] }
